Added self signed cert, and configuration to serve images with 1 day cache.

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -3,19 +3,26 @@ upstream backend {
 }
 server {
         listen 80 default_server;
+        listen 443 ssl;
+        ssl_certificate  /etc/nginx/nginx.crt;
+        ssl_certificate_key   /etc/nginx/nginx.key;
         root /var/www/app/public;
         index index.php index.html index.htm;
         server_name _;
         if (!-e $request_filename) {
-                rewrite ^/(.*)  /index.php?/$1 last;
+            rewrite ^/(.*)  /index.php?/$1 last;
+        }
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+            expires 1d;
+            log_not_found off;
         }
         location / {
-                try_files $uri $uri/ /index.php;
+            try_files $uri $uri/ /index.php;
         }
         location ~ \.php$ {
-                fastcgi_pass backend;
-                fastcgi_index index.php;
-                include fastcgi_params;
+            fastcgi_pass backend;
+            fastcgi_index index.php;
+            include fastcgi.conf;
         }
 }
 
