--- a/conf/default.conf
+++ b/conf/default.conf
@@ -32,14 +32,14 @@ server {
         index index.php index.html index.htm;
         server_name management.*;
         if (!-e $request_filename) {
-                rewrite ^/(.*)  /index.php?/$1 last;
+            rewrite ^/(.*)  /index.php?/$1 last;
         }
         location / {
-                try_files $uri $uri/ /index.php;
+            try_files $uri $uri/ /index.php;
         }
         location ~ \.php$ {
-                fastcgi_pass backend;
-                fastcgi_index index.php;
-                include fastcgi_params;
+            fastcgi_pass backend;
+            fastcgi_index index.php;
+            include fastcgi.conf;
         }
 }
