--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,6 +2,7 @@ user www-data;
 worker_processes 1;
 pid /run/nginx.pid;
 daemon off;
+error_log /dev/stdout info;
 
 events {
 worker_connections 768;
@@ -14,8 +15,7 @@ keepalive_timeout 65;
 types_hash_max_size 2048;
 include /etc/nginx/mime.types;
 default_type application/octet-stream;
-access_log /var/log/nginx/access.log;
-error_log /var/log/nginx/error.log;
+access_log /dev/stdout;
 gzip on;
 gzip_disable "msie6";
 include /etc/nginx/conf.d/*;
