Add Pagespeed support

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -18,5 +18,5 @@ default_type application/octet-stream;
 access_log /dev/stdout;
 gzip on;
 gzip_disable "msie6";
-include /etc/nginx/conf.d/*;
+include /usr/local/nginx/conf/conf.d/*;
 }
