--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,7 +13,7 @@ tcp_nopush on;
 tcp_nodelay on;
 keepalive_timeout 65;
 types_hash_max_size 2048;
-include /etc/nginx/mime.types;
+include /usr/local/nginx/conf/mime.types;
 default_type application/octet-stream;
 access_log /dev/stdout;
 gzip on;
