--- a/conf/default.conf
+++ b/conf/default.conf
@@ -4,8 +4,8 @@ upstream backend {
 server {
         listen 80 default_server;
         listen 443 ssl;
-        ssl_certificate  /etc/nginx/nginx.crt;
-        ssl_certificate_key   /etc/nginx/nginx.key;
+        ssl_certificate  /usr/local/nginx/conf/nginx.crt;
+        ssl_certificate_key   /usr/local/nginx/conf/nginx.key;
         root /var/www/app/public;
         index index.php index.html index.htm;
         server_name _;
